Improved responsivness for older phones Modified title and description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
-			content="David Tejuosho is a Computer science and engineering student who's passionate for taking initiative and using technology to solve novel problems"
+			content="I finished this project in 3 days. The vision was to create a project whereby I could use and improve my skills in web development and data collection through APIs. I used the twitter api and azure cognitive services to help me achieve that"
 		/>
 		<meta name="keywords" content="David Tejuosho, CS Student, Tejuosho" />
 		<meta name="author" content="David Tejuosho" />
@@ -47,7 +47,7 @@
 			href="https://davidteju.dev/icons/favicon-16x16.png"
 		/>
 		<link rel="manifest" href="https://davidteju.dev/icons/site.webmanifest" />
-		<title>About me</title>
+		<title>David-O-Meter</title>
 	</head>
 	<body>
 		<header id="header">
@@ -104,11 +104,13 @@
 				<div id="negative" title="Negative Sentiment/Opinions">NaN</div>
 			</div>
 
-			<div id="footnote">
-				<span id="number-of-tweets">$num tweets analyzed</span>
-				<span id="time-updated">Last updated: </span>
-			</div>
+			<div id="fake-margin"></div>
 		</main>
+
+		<div id="footnote">
+			<span id="number-of-tweets">$num tweets analyzed</span>
+			<span id="time-updated">Last updated: </span>
+		</div>
 
 		<!-- Switch for color or no color -->
 		<label class="color-switch">
