added link to github README.md

--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
 				<div id="negative" title="Negative Sentiment/Opinions">NaN</div>
 			</div>
 
+			<a
+				id="learn-more"
+				href="https://github.com/DavidTeju/David-O-Meter/blob/main/README.md"
+				>Learn more about this project</a
+			>
+
 			<div id="fake-margin"></div>
 		</main>
 
