fixed links to homepage

--- a/index.html
+++ b/index.html
@@ -53,29 +53,27 @@
 		<header id="header">
 			<nav>
 				<div class="nav">
-					<a
-						href="https://davidteju.dev/index.html"
-						title="Home"
-						class="faux-h1"
-						>David Tejuosho</a
-					>
+					<a href="/index.html" title="Home" class="faux-h1">David Tejuosho</a>
 					<p><em>Student of Computer Science</em></p>
 				</div>
 				<ul>
 					<li>
-						<a href="https://davidteju.dev/subpages/about-me.html">Who am I?</a>
+						<a href="/#about-me" title="and how to contact me">Who am I?</a>
 					</li>
 					<li>
-						<a href="https://davidteju.dev/subpages/resume.html">My Resume</a>
+						<a href="/#resume-sec" title="all my impressive endeavours"
+							>My Resume</a
+						>
 					</li>
 					<li>
-						<a href="https://davidteju.dev/subpages/stuff-I-like.html"
+						<a href="/#stuff-i-like" title="You need to see this!"
 							>Stuff I like</a
 						>
 					</li>
 				</ul>
 			</nav>
 		</header>
+
 		<main id="main">
 			<a
 				href="https://github.com/DavidTeju/David-O-Meter"
